--- a/notebooks/yoiq/01_exploration.ipynb
+++ b/notebooks/yoiq/01_exploration.ipynb
@@ -21,8 +21,8 @@
     "# Make sure to have the MLFlow server on before running this code.\n",
     "mlflow.set_tracking_uri(uri=MLFLOW_URI)\n",
     "experiment = mlflow.set_experiment(EXPERIMENT_NAME)\n",
-    "train_data = load_train_data()\n",
-    "test_data = load_test_data()"
+    "X_train, y_train = load_train_data()\n",
+    "X_test = load_test_data()"
    ]
   },
   {
@@ -106,7 +106,7 @@
    "source": [
     "from nltk.tokenize import word_tokenize, sent_tokenize\n",
     "\n",
-    "text = train_data.REVIEW.iloc[0]\n",
+    "text = X_train[0]\n",
     "\n",
     "sentences = sent_tokenize(text)\n",
     "print(sentences)\n",
@@ -230,7 +230,7 @@
     "from nltk.stem import PorterStemmer\n",
     "from Sastrawi.Stemmer.StemmerFactory import StemmerFactory\n",
     "\n",
-    "text = train_data.REVIEW.iloc[1]\n",
+    "text = X_train[1]\n",
     "\n",
     "sentences = sent_tokenize(text)\n",
     "words = word_tokenize(text)\n",
